New send message icon

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -133,14 +133,15 @@ import { Icon } from "@jobber/components/Icon";
 
 ### Messaging
 
-| Icon                     | `Name`     |
-| :----------------------- | :--------- |
-| <Icon name="chat" />     | `chat`     |
-| <Icon name="email" />    | `email`    |
-| <Icon name="markSent" /> | `markSent` |
-| <Icon name="reminder" /> | `reminder` |
-| <Icon name="sms" />      | `sms`      |
-| <Icon name="sms2" />     | `sms2`     |
+| Icon                        | `Name`        |
+| :-------------------------- | :------------ |
+| <Icon name="chat" />        | `chat`        |
+| <Icon name="email" />       | `email`       |
+| <Icon name="markSent" />    | `markSent`    |
+| <Icon name="reminder" />    | `reminder`    |
+| <Icon name="sms" />         | `sms`         |
+| <Icon name="sms2" />        | `sms2`        |
+| <Icon name="sendMessage" /> | `sendMessage` |
 
 ### User
 
