Removed seconds when showing just time

--- a/packages/components/src/FormatRelativeDateTime/FormatRelativeDateTime.mdx
+++ b/packages/components/src/FormatRelativeDateTime/FormatRelativeDateTime.mdx
@@ -28,7 +28,7 @@ import { FormatRelativeDateTime } from "@jobber/components/FormatRelativeDateTim
 If the message was received less than an hour ago the format is x minutes ago
 
 If the message was received today, but more than an hour ago, the format becomes
-the time it was received
+the hours and minutes it was received at
 
 If the message was received this within the last six days, the format is Sun,
 Mon, Tue, Wed, Thu, Fri, Sat
