--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -91,7 +91,7 @@ discrete options, such as “fixed price” and “per visit” invoicing option
 
 ## Disabled
 
-A disabled checbkbox cannot be operated by the user. Your primary goal should be to avoid disabled states in an interface, but some cases may require that an element be disabled.
+A disabled checkbox cannot be operated by the user. Your primary goal should be to avoid disabled states in an interface, but some cases may require that an element be disabled.
 
 If presenting a disabled "checked" checkbox to the user, provide a clear description for the user on how to enable the checkbox to avoid creating a sense that the user has lost control of the interface.
 
