full static component list and hide ui

--- a/docs/Playground.mdx
+++ b/docs/Playground.mdx
@@ -1,17 +1,51 @@
 ---
 name: Playground
-menu: Playground
-route: /
+route: /playground
+fullpage: true
 ---
 
 import { useRef, useState } from "react";
 import { Playground, Props } from "docz";
-// import * from "@jobber/components/";
+import { Autocomplete } from "@jobber/components/Autocomplete";
+import { Avatar } from "@jobber/components/Avatar";
+import { Banner } from "@jobber/components/Banner";
 import { Button } from "@jobber/components/Button";
 import { Card } from "@jobber/components/Card";
-import { Content } from "@jobber/components/Content";
 import { Checkbox } from "@jobber/components/Checkbox";
-import { Banner } from "@jobber/components/Banner";
+import { ConfirmationModal } from "@jobber/components/ConfirmationModal";
+import { Content } from "@jobber/components/Content";
+import { DescriptionList } from "@jobber/components/DescriptionList";
+import { Emphasis } from "@jobber/components/Emphasis";
+import { FeatureSwitch } from "@jobber/components/FeatureSwitch";
+import { FormatDate } from "@jobber/components/FormatDate";
+import { FormatEmail } from "@jobber/components/FormatEmail";
+import { FormatRelativeDateTime } from "@jobber/components/FormatRelativeDateTime";
+import { FormatTime } from "@jobber/components/FormatTime";
+import { FormField } from "@jobber/components/FormField";
+import { Heading } from "@jobber/components/Heading";
+import { Icon } from "@jobber/components/Icon";
+import { InlineLabel } from "@jobber/components/InlineLabel";
+import { InputGroup } from "@jobber/components/InputGroup";
+import { InputNumber } from "@jobber/components/InputNumber";
+import { InputPassword } from "@jobber/components/InputPassword";
+import { InputText } from "@jobber/components/InputText";
+import { InputTime } from "@jobber/components/InputTime";
+import { InputValidation } from "@jobber/components/InputValidation";
+import { LightBox } from "@jobber/components/LightBox";
+import { List } from "@jobber/components/List";
+import { Markdown } from "@jobber/components/Markdown";
+import { Menu } from "@jobber/components/Menu";
+import { Modal } from "@jobber/components/Modal";
+import { Page } from "@jobber/components/Page";
+import { ProgressBar } from "@jobber/components/ProgressBar";
+import { RadioGroup } from "@jobber/components/RadioGroup";
+import { Select } from "@jobber/components/Select";
+import { Switch } from "@jobber/components/Switch";
+import { Table } from "@jobber/components/Table";
+import { Tabs } from "@jobber/components/Tabs";
+import { Text } from "@jobber/components/Text";
+import { Tooltip } from "@jobber/components/Tooltip";
+import { Typography } from "@jobber/components/Typography";
 
 # Playground
 
