feat(components): InputText Automatic Resize (#303)
* working prototype, need to adjust condions and fudge factor

* cleanup

* introduce interface to enforce types

* created tests and small refactor of calculateRows component

* addressing feedback on PR

* completely changed implementation to directly manipulate the textarea size instead of passing through rows prop

* Remove old tests

* Add return type

* Addressing comments

* Get line height off of the computed style

* Add padding and border to text area height calculations

* Fix text area sizing issue

Co-authored-by: Clinton Pahl <crpahl@gmail.com>

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -52,13 +52,27 @@ Use this to allow users to provide short answers.
 
 ## Multiline
 
-Use this to allow users to provide long answers.
+Use this to allow users to provide long answers. The default number of rows is
+three.
 
 <Playground>
   <InputText
     multiline={true}
     placeholder="Describe your age"
     name="describeAge"
+  />
+</Playground>
+
+## Multiline with Minimum and Maximum
+
+This is to allow flexibility in the displayed textarea size as the user types.
+The textarea will start at a specified minimum and grow to a specified maximum.
+
+<Playground>
+  <InputText
+    defaultValue="Rocinante"
+    multiline={true}
+    rows={{ min: 1, max: 4 }}
   />
 </Playground>
 
