--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -154,3 +154,63 @@ using either promises or `await` in `getOptions`.
     }
   }}
 </Playground>
+
+## Autocomplete with section headings, description and extra details
+
+You can specify an array of sections which contains options objects.
+
+<Playground>
+  {() => {
+    const options = [
+      {
+        heading: "Ships",
+        options: [
+          {
+            value: 1,
+            label: "Sulaco",
+            description: "They mostly come at night, mostly.",
+            details: "LV-426"
+          },
+          { value: 1, label: "Nostromo", details: "LV-426" },
+          { value: 3, label: "Serenity", description: "I aim to misbehave." },
+          { value: 4, label: "Sleeper Service" },
+          { value: 5, label: "Enterprise" },
+          {
+            value: 6,
+            label: "Enterprise-D",
+            description: "Tea, earl grey, hot.",
+            details: "NCC-1701D"
+          }
+        ]
+      },
+      {
+        heading: "Planets",
+        options: [
+          { value: 1, label: "Endor" },
+          { value: 2, label: "Vulcan" },
+          { value: 3, label: "Bespin" },
+          { value: 4, label: "Tatooine" },
+          { value: 5, label: "Enterprise" },
+          { value: 6, label: "Ariel" }
+        ]
+      }
+    ];
+    const [value, setValue] = useState();
+    return (
+      <Autocomplete
+        value={value}
+        initialOptions={[]}
+        onChange={setValue}
+        getOptions={getOptions}
+        placeholder="Search for something"
+      />
+    );
+    function getOptions(text) {
+      if (text === "") {
+        return options;
+      }
+      const filterRegex = new RegExp(text, "i");
+      return options.filter(option => option.label.match(filterRegex));
+    }
+  }}
+</Playground>
