--- a/packages/components/src/Toast/Toast.mdx
+++ b/packages/components/src/Toast/Toast.mdx
@@ -50,7 +50,7 @@ import { Toast } from "@jobber/components/Toast";
         variation: "learning",
         onClick: () => {
           toastRef.current.add({
-            message: `Google a recipe!`,
+            message: `Google a recipe and then let me know how it goes!!`,
             onClose: () => console.log("learned"),
             icon: "person"
           });
