--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -67,6 +67,197 @@ import { Autocomplete } from "@jobber/components/Autocomplete";
   See `Button.mdx` for a good example of this.
 -->
 
+## Autocomplete with optional item descriptions and extra details
+
+You can add a description to an option, which will appear below the option's
+label. You can also add a detail to an option which shows on the option's the
+bottom right. Both of these are optional per option.
+
+<Playground>
+  {() => {
+    const options = [
+      {
+        value: 1,
+        label: "Sulaco",
+        description: "They mostly come at night, mostly.",
+        details: "LV-426"
+      },
+      { value: 2, label: "Nostromo", details: "LV-426" },
+      { value: 3, label: "Serenity", description: "I aim to misbehave." },
+      { value: 4, label: "Sleeper Service" },
+      { value: 5, label: "Enterprise" },
+      {
+        value: 6,
+        label: "Enterprise-D",
+        description: "Tea, earl grey, hot.",
+        details: "NCC-1701D"
+      }
+    ];
+    const [value, setValue] = useState();
+    return (
+      <Autocomplete
+        value={value}
+        initialOptions={options}
+        onChange={setValue}
+        getOptions={getOptions}
+        placeholder="Search for something"
+      />
+    );
+    function getOptions(text) {
+      if (text === "") {
+        return options;
+      }
+      const filterRegex = new RegExp(text, "i");
+      return options.filter(option =>
+        option.heading ? true : option.label.match(filterRegex)
+      );
+    }
+  }}
+</Playground>
+
+## Autocomplete with checkmarks removed
+
+You can remove the checkmarks when an option is selected.
+
+<Playground>
+  {() => {
+    const options = [
+      {
+        value: 1,
+        label: "Sulaco"
+      },
+      { value: 2, label: "Nostromo" },
+      { value: 3, label: "Serenity" },
+      { value: 4, label: "Sleeper Service" },
+      { value: 5, label: "Enterprise" },
+      {
+        value: 6,
+        label: "Enterprise-D"
+      }
+    ];
+    const [value, setValue] = useState();
+    return (
+      <Autocomplete
+        value={value}
+        checkmarks={false}
+        initialOptions={options}
+        onChange={setValue}
+        getOptions={getOptions}
+        placeholder="Search for something"
+      />
+    );
+    function getOptions(text) {
+      if (text === "") {
+        return options;
+      }
+      const filterRegex = new RegExp(text, "i");
+      return options.filter(option =>
+        option.heading ? true : option.label.match(filterRegex)
+      );
+    }
+  }}
+</Playground>
+
+## Autocomplete with option separators
+
+You can apply a separator to each option which appears as a bottom border.
+
+<Playground>
+  {() => {
+    const options = [
+      {
+        value: 1,
+        label: "Sulaco"
+      },
+      { value: 2, label: "Nostromo" },
+      { value: 3, label: "Serenity" },
+      { value: 4, label: "Sleeper Service" },
+      { value: 5, label: "Enterprise" },
+      {
+        value: 6,
+        label: "Enterprise-D"
+      }
+    ];
+    const [value, setValue] = useState();
+    return (
+      <Autocomplete
+        value={value}
+        separators={true}
+        initialOptions={options}
+        onChange={setValue}
+        getOptions={getOptions}
+        placeholder="Search for something"
+      />
+    );
+    function getOptions(text) {
+      if (text === "") {
+        return options;
+      }
+      const filterRegex = new RegExp(text, "i");
+      return options.filter(option =>
+        option.heading ? true : option.label.match(filterRegex)
+      );
+    }
+  }}
+</Playground>
+
+## Autocomplete with section headings, description and extra details
+
+This autocomplete uses section headings, details, descriptions and option
+separators. It also removes the checkmarks when selecting an item.
+
+<Playground>
+  {() => {
+    const options = [
+      { label: "Ships", heading: true },
+      {
+        value: 1,
+        label: "Sulaco",
+        description: "They mostly come at night, mostly.",
+        details: "LV-426"
+      },
+      { value: 2, label: "Nostromo", details: "LV-426" },
+      { value: 3, label: "Serenity", description: "I aim to misbehave." },
+      { value: 4, label: "Sleeper Service" },
+      { value: 5, label: "Enterprise" },
+      {
+        value: 6,
+        label: "Enterprise-D",
+        description: "Tea, earl grey, hot.",
+        details: "NCC-1701D"
+      },
+      { label: "Planets", heading: true },
+      { value: 7, label: "Endor" },
+      { value: 8, label: "Vulcan" },
+      { value: 9, label: "Bespin" },
+      { value: 10, label: "Tatooine" },
+      { value: 11, label: "Enterprise" },
+      { value: 12, label: "Ariel" }
+    ];
+    const [value, setValue] = useState();
+    return (
+      <Autocomplete
+        value={value}
+        separators={true}
+        checkmarks={false}
+        initialOptions={options}
+        onChange={setValue}
+        getOptions={getOptions}
+        placeholder="Search for something"
+      />
+    );
+    function getOptions(text) {
+      if (text === "") {
+        return options;
+      }
+      const filterRegex = new RegExp(text, "i");
+      return options.filter(option =>
+        option.heading ? true : option.label.match(filterRegex)
+      );
+    }
+  }}
+</Playground>
+
 ## Setting Value
 
 You can supply a value to `Autocomplete` in the form of an active `Option`.
@@ -151,62 +342,6 @@ using either promises or `await` in `getOptions`.
           resolve(options.filter(option => option.label.match(filterRegex)));
         }, 300);
       });
-    }
-  }}
-</Playground>
-
-## Autocomplete with section headings, description and extra details
-
-You can specify an array of sections which contains options objects.
-
-<Playground>
-  {() => {
-    const options = [
-      { label: "Ships", heading: true },
-      {
-        value: 1,
-        label: "Sulaco",
-        description: "They mostly come at night, mostly.",
-        details: "LV-426"
-      },
-      { value: 2, label: "Nostromo", details: "LV-426" },
-      { value: 3, label: "Serenity", description: "I aim to misbehave." },
-      { value: 4, label: "Sleeper Service" },
-      { value: 5, label: "Enterprise" },
-      {
-        value: 6,
-        label: "Enterprise-D",
-        description: "Tea, earl grey, hot.",
-        details: "NCC-1701D"
-      },
-      { label: "Planets", heading: true },
-      { value: 7, label: "Endor" },
-      { value: 8, label: "Vulcan" },
-      { value: 9, label: "Bespin" },
-      { value: 10, label: "Tatooine" },
-      { value: 11, label: "Enterprise" },
-      { value: 12, label: "Ariel" }
-    ];
-    const [value, setValue] = useState();
-    return (
-      <Autocomplete
-        value={value}
-        separators={true}
-        checkmarks={false}
-        initialOptions={options}
-        onChange={setValue}
-        getOptions={getOptions}
-        placeholder="Search for something"
-      />
-    );
-    function getOptions(text) {
-      if (text === "") {
-        return options;
-      }
-      const filterRegex = new RegExp(text, "i");
-      return options.filter(option =>
-        option.heading ? true : option.label.match(filterRegex)
-      );
     }
   }}
 </Playground>
