--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -122,18 +122,12 @@ You can remove the checkmarks when an option is selected.
 <Playground>
   {() => {
     const options = [
-      {
-        value: 1,
-        label: "Sulaco"
-      },
+      { value: 1, label: "Sulaco" },
       { value: 2, label: "Nostromo" },
       { value: 3, label: "Serenity" },
       { value: 4, label: "Sleeper Service" },
       { value: 5, label: "Enterprise" },
-      {
-        value: 6,
-        label: "Enterprise-D"
-      }
+      { value: 6, label: "Enterprise-D" }
     ];
     const [value, setValue] = useState();
     return (
@@ -165,24 +159,64 @@ You can apply a separator to each option which appears as a bottom border.
 <Playground>
   {() => {
     const options = [
-      {
-        value: 1,
-        label: "Sulaco"
-      },
+      { value: 1, label: "Sulaco" },
       { value: 2, label: "Nostromo" },
       { value: 3, label: "Serenity" },
       { value: 4, label: "Sleeper Service" },
       { value: 5, label: "Enterprise" },
-      {
-        value: 6,
-        label: "Enterprise-D"
-      }
+      { value: 6, label: "Enterprise-D" }
     ];
     const [value, setValue] = useState();
     return (
       <Autocomplete
         value={value}
         separators={true}
+        initialOptions={options}
+        onChange={setValue}
+        getOptions={getOptions}
+        placeholder="Search for something"
+      />
+    );
+    function getOptions(text) {
+      if (text === "") {
+        return options;
+      }
+      const filterRegex = new RegExp(text, "i");
+      return options.filter(option =>
+        option.heading ? true : option.label.match(filterRegex)
+      );
+    }
+  }}
+</Playground>
+
+## Autocomplete with section headings
+
+An autocomplete can provide section headings to break up the options.
+
+<Playground>
+  {() => {
+    const options = [
+      { label: "Ships", heading: true },
+      { value: 1, label: "Sulaco" },
+      { value: 2, label: "Nostromo" },
+      { value: 3, label: "Serenity" },
+      { value: 4, label: "Sleeper Service" },
+      { value: 5, label: "Enterprise" },
+      { value: 6, label: "Enterprise-D" },
+      { label: "Planets", heading: true },
+      { value: 7, label: "Endor" },
+      { value: 8, label: "Vulcan" },
+      { value: 9, label: "Bespin" },
+      { value: 10, label: "Tatooine" },
+      { value: 11, label: "Enterprise" },
+      { value: 12, label: "Ariel" }
+    ];
+    const [value, setValue] = useState();
+    return (
+      <Autocomplete
+        value={value}
+        separators={true}
+        checkmarks={false}
         initialOptions={options}
         onChange={setValue}
         getOptions={getOptions}
