update undef type

--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -117,7 +117,8 @@ bottom right. Both of these are optional per option.
 
 ## Autocomplete with menu size constraint
 
-You can specify a medium size which limits the menu to 300px.
+You can specify a medium size which limits the menu to 300px. By default we show
+everything. When constrained you can scroll through other elements.
 
 <Playground>
   {() => {
