--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -96,6 +96,7 @@ bottom right. Both of these are optional per option.
     const [value, setValue] = useState();
     return (
       <Autocomplete
+        browserAutocomplete={false}
         value={value}
         initialOptions={options}
         onChange={setValue}
