add adjustable input field size

--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -38,7 +38,7 @@ import { Autocomplete } from "@jobber/components/Autocomplete";
     return (
       <Autocomplete
         value={value}
-        initialOptions={[]}
+        initialOptions={[options]}
         onChange={setValue}
         getOptions={getOptions}
         placeholder="Search for something"
