--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -257,11 +257,13 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="eyeCrossed" /> | `eyeCrossed` |
 | <Icon name="gift" />       | `gift`       |
 | <Icon name="grid" />       | `grid`       |
+| <Icon name="home" />       | `home`       |
 | <Icon name="link" />       | `link`       |
 | <Icon name="lock" />       | `lock`       |
 | <Icon name="logout" />     | `logout`     |
 | <Icon name="menu" />       | `menu`       |
 | <Icon name="more" />       | `more`       |
+| <Icon name="offline" />    | `offline`    |
 | <Icon name="phone" />      | `phone`      |
 | <Icon name="quickbooks" /> | `quickbooks` |
 | <Icon name="reports" />    | `reports`    |
