--- a/packages/components/src/InputGroup/InputGroup.mdx
+++ b/packages/components/src/InputGroup/InputGroup.mdx
@@ -6,10 +6,12 @@ route: /components/input-group
 
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
+import { Autocomplete } from "../Autocomplete";
 import { InputGroup } from ".";
 import { InputText } from "../InputText";
 import { InputTime } from "../InputTime";
 import { CivilTime } from "@std-proposal/temporal";
+import { useState } from "react";
 
 # InputGroup
 
@@ -57,4 +59,52 @@ horizontal direction.
       <InputText placeholder="Country" />
     </InputGroup>
   </InputGroup>
+</Playground>
+
+---
+
+## Nested with Autocomplete
+
+The [Autocomplete component](/components/autocomplete) also works inside the
+`InputGroup`.
+
+<Playground>
+  {() => {
+    const options = [
+      { value: 1, label: "Nostromo" },
+      { value: 2, label: "Rodger Young" },
+      { value: 3, label: "Serenity" },
+      { value: 4, label: "Sleeper Service" },
+      { value: 5, label: "Enterprise" },
+      { value: 6, label: "Enterprise-D" }
+    ];
+    const [value, setValue] = useState();
+    return (
+      <InputGroup>
+        <InputText placeholder="Street 1" />
+        <InputText placeholder="Street 2" />
+        <InputGroup flowDirection="horizontal">
+          <InputText placeholder="City" />
+          <Autocomplete
+            value={value}
+            initialOptions={[]}
+            onChange={setValue}
+            getOptions={getOptions}
+            placeholder="Autocomplete this!"
+          />
+        </InputGroup>
+        <InputGroup flowDirection="horizontal">
+          <InputText placeholder="Zip code" />
+          <InputText placeholder="Country" />
+        </InputGroup>
+      </InputGroup>
+    );
+    function getOptions(text) {
+      if (text === "") {
+        return options;
+      }
+      const filterRegex = new RegExp(text, "i");
+      return options.filter(option => option.label.match(filterRegex));
+    }
+  }}
 </Playground>
