good first base for display

--- a/packages/components/src/FileCard/FileCard.mdx
+++ b/packages/components/src/FileCard/FileCard.mdx
@@ -20,14 +20,14 @@ import { FileCard } from "@jobber/components/FileCard";
 
 <Playground>
   <FileCard
-    fileDetails={{
+    file={{
       id: "abc",
-      name: "my File",
+      name: "myballisbigandroundIamrollingitowntheground.heic",
       type: "audio/ogg",
       size: 1024,
       progress: 0.3,
-      src: "http://www.google.com/logo.png",
-      thumbnailSrc: "http://www.google.com/logo_small.png"
+      src: "http://www.moooogle.com/logo.png",
+      thumbnailSrc: "http://www.moooogle.com/logo_small.png"
     }}
     onDelete={() => alert("🧨BALEETED!💥")}
   />
@@ -57,11 +57,3 @@ following:
 
   See `Button.mdx` for a good example of this.
 -->
-
-## Loud
-
-Use `loud` to indicate that a component is yelling.
-
-<Playground>
-  <FileCard text="Fred" loud={true} />
-</Playground>
