more stuff - file sizes and styling

--- a/packages/components/src/FileCard/FileCard.mdx
+++ b/packages/components/src/FileCard/FileCard.mdx
@@ -24,10 +24,12 @@ import { FileCard } from "@jobber/components/FileCard";
       id: "abc",
       name: "myballisbigandroundIamrollingitowntheground.heic",
       type: "audio/ogg",
-      size: 1024,
+      size: 213402324,
       progress: 0.3,
-      src: "http://www.moooogle.com/logo.png",
-      thumbnailSrc: "http://www.moooogle.com/logo_small.png"
+      src:
+        "https://res-1.cloudinary.com/crunchbase-production/image/upload/c_thumb,h_256,w_256,f_auto,g_faces,z_0.7,q_auto:eco/ywedismk5vf5uqc2nngg",
+      thumbnailSrc:
+        "https://res-1.cloudinary.com/crunchbase-production/image/upload/c_thumb,h_256,w_256,f_auto,g_faces,z_0.7,q_auto:eco/ywedismk5vf5uqc2nngg"
     }}
     onDelete={() => alert("🧨BALEETED!💥")}
   />
